# cicd-to-aws

./: pyproject.toml
.github/: README.md
.github/workflows/: main.yml
