[tool.poetry]
name = "cicd-to-aws"
version = "0.1.0"
description = ""
authors = ["Denis Astahov https://www.astahov.net/"]
license = "Copyleft"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
